--- a/doyolab/index.html
+++ b/doyolab/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="fade-in-section">
             <h1>Just do it.</h1>
-            <p>しっかり忠告しましたからね。<br>ちなみに僕は今、痛い目に遭っています。</p>
+            <p>ちなみに僕は今、痛い目に遭っています。</p>
         </div>
     </div>
     <div class="random-text-container">
