--- a/doyolab/kamakura.html
+++ b/doyolab/kamakura.html
@@ -77,8 +77,11 @@
         <div class="heading-21">
             <h1>取り組む課題→帽子が風で飛ばされないようにするには？</h1>
         </div>
+        <h1>完成動画</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/j792mhZAnpk?si=1NUQCxqWPX47pw00" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
       </article>
+
       
       
     </section>
