--- a/doyolab/circular.html
+++ b/doyolab/circular.html
@@ -40,7 +40,7 @@
           </li>
           <li>
               <strong>アイデア創出：</strong>
-              ペットボトルキャップの再利用方法をテーマに、学生たちは約2か月間の議論を重ね、3Dプリンターやレーザー加工機を使ってプロトタイプ（試作品）を制作しました。
+              ペットボトルキャップの再利用方法をテーマに、約2か月間の議論を重ね、3Dプリンターやレーザー加工機を使ってプロトタイプ（試作品）を制作しました。
           </li>
           <li>
               <strong>発表会：</strong>
