--- a/doyolab/circular.html
+++ b/doyolab/circular.html
@@ -44,7 +44,7 @@
           </li>
           <li>
               <strong>発表会：</strong>
-              2024年11月29日には、学生たちが12種類のプロトタイプを湘南貿易の担当者に向けて発表しました。
+              2024年11月29日には、12種類のプロトタイプを湘南貿易の担当者に向けて発表しました。
           </li>
       </ul>
       <h3>発表会後の展開</h3>
