--- a/doyolab/index.html
+++ b/doyolab/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Particle Text</title>
+    <title>DOYO LAB AMIKURA</title>
+    <link rel="icon" href="/helpme/images/seadsicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./doyolab.css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
