--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </a>
             </li>
             <li>
-                <a href="./helpme/cheindex.html">
+                <a href="./helpme/test.html">
                 <img class="proto" src="./images/samlec.webp"></a>
                 <dl>
                     <dt>講義を要約</dt>
