--- a/doyolab/SEAds.html
+++ b/doyolab/SEAds.html
@@ -111,7 +111,7 @@
     </script>
 
     <footer>
-        <p>&copy; Your Name. All rights reserved.</p>
+        <p>&copy; SEAds. All rights reserved.</p>
     </footer>
 </body>
 </html>
