--- a/doyolab/SEAds.html
+++ b/doyolab/SEAds.html
@@ -43,6 +43,7 @@
         <h2>概要</h2>
         <p>2023.4.1より始まった、ものづくりワークショップの企画・運営を行う学生団体SEAdsの紹介</p>
         <h4><a href="https://www.seads.info/">団体公式HP</a></h4>
+        <h4><a href="https://www.instagram.com/seads_information/">団体公式Instagram</a></h4>
     </section>
 
     <section id="profile">
@@ -71,7 +72,7 @@
                 <div>
                     <h2>個人アカウントの投稿</h2>
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D529822213425596%26id%3D100091934651977&show_text=true&width=500" width="500" height="250" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-                    
+
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D489216104152874%26id%3D100091934651977&show_text=true&width=500" width="500" height="708" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
 
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D452409487833536%26id%3D100091934651977&show_text=true&width=500" width="500" height="846" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
