--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     </div>
     <div class="lead">
         <p>私、網倉光生と申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
-            <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。</p>
+            <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。<br><br>
+        <a href="https://doyolab.net/xbp/intro/"target="_blank">→エクスビジネスプログラムについてはこちらから</a></p>
     </div>
 
 
