--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <script src="./jquery.js"></script>
     </div>
     <div class="lead">
-        <p>私、網倉光生と申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の活動記録を閲覧することができます。
+        <p>私、網倉光生と申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の学生生活における活動記録を閲覧することができます。
             <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。<br><br>
         <a href="https://doyolab.net/xbp/intro/"target="_blank">→エクスビジネスプログラムについてはこちらから</a></p>
     </div>
@@ -133,19 +133,19 @@
                 </dl>
             </li>
             <li>
-                <a href="./helpme/test.html">
-                <img class="proto" src="./images/samlec.webp"></a>
-                <dl>
-                    <dt>講義を要約</dt>
-                    <dd></dd>
-                </dl>
-            </li>
-            <li>
                 <a href="./doyolab/index.html">
                 <img class="doyolab" src="./images/IMG_2762.png"></a>
                 <dl>
                     <dt>道用ゼミ</dt>
-                    <dd></dd>
+                    <dd>ゼミの活動を閲覧できます</dd>
+                </dl>
+            </li>
+            <li>
+                <a href="./helpme/test.html">
+                <img class="proto" src="./images/samlec.webp"></a>
+                <dl>
+                    <dt>講義を要約</dt>
+                    <dd>zoomなどの講義内容を文字起こしできるサイトを作成しました</dd>
                 </dl>
             </li>
             <li>
