--- a/index.html
+++ b/index.html
@@ -86,28 +86,28 @@
             <li>
                 <a href="./de12/index.html"target="_blank"><img class="de12img" src="./images/pcprograming.png" alt="デザイン演習画像"></a>
                 <dl>
-                    <dt>デザイン演習Ⅰ・Ⅱ</dt>
+                    <dt>1年次 デザイン演習Ⅰ・Ⅱ</dt>
                     <dd>文化人類学的な観察力と共感力、オープンイノベーションに参加する為の基礎的なデジタル技術を会得する</dd>
                 </dl>
             </li>
             <li>
                 <a href="./digi_fab/index.html"target="_blank"><img class="defaimg" src="./images/3dprinter.png" alt="デジタルファブリケーション画像"></a>
                 <dl>
-                    <dt>デジタルファブリケーション</dt>
+                    <dt>1年次 デジタルファブリケーション</dt>
                     <dd>創造的な問題解決能力を得るための道具としてデジタルファブリケーションを<br>扱えるようにする</dd>
                 </dl>
             </li>
             <li>
                 <a href="./de34/index.html"target="_blank"><img class="de34img" src="./images/micon.png" alt="デザイン34演習画像"></a>
                 <dl>
-                    <dt>デザイン演習Ⅲ・Ⅳ</dt>
+                    <dt>2年次 デザイン演習Ⅲ・Ⅳ</dt>
                     <dd>イノベーションを起こせる可能性がある技術的なことへの造詣を深める</dd>
                 </dl>
             </li>
             <li>
                 <a href="./de56/index.html"target="_blank"><img class="de56img" src="./images/bisinessman.png" alt="デザイン演習56画像"></a>
                 <dl>
-                    <dt>デザイン演習Ⅴ・Ⅵ</dt>
+                    <dt>2年次 デザイン演習Ⅴ・Ⅵ</dt>
                     <dd>アイディアや技術を社会の中で活かすための経営知識を扱い、ビジネスプランにまで落とし込む。</dd>
                 </dl>
             </li>
