--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                 <a href="https://shibuya-qws.com/project/manabipalette.com">
                 <img class="de56img" src="./images/manapare.png"></a>
                 <dl>
-                    <dt>長期インターン</dt>
-                    <dd>一社 まなびぱれっと</dd>
+                    <dt>一社 まなびぱれっと</dt>
+                    <dd>長期インターン</dd>
                 </dl>
             </li>
             <li>
@@ -138,6 +138,14 @@
                 <dl>
                     <dt>道用ゼミ</dt>
                     <dd>ゼミの活動を閲覧できます</dd>
+                </dl>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/purasushiya_official/">
+                <img class="doyolab" src="./images/purasushiya.png"></a>
+                <dl>
+                    <dt>プラ寿司屋</dt>
+                    <dd>コロナ禍で活躍したアクリルパーテーション活用プロジェクト</dd>
                 </dl>
             </li>
             <li>
