--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p class="EA">Extracurricular Activities</p>
             
             <li>
-                <a href="https://www.seads.info/">
+                <a href="./doyolab/SEAds.html">
                 <img class="seads" src="./images/seads_logo2.png"></a>
                 <dl>
                     <dt>学生団体 SEAds</dt>
