--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <img class="seads" src="./images/seads_logo2.png"></a>
                 <dl>
                     <dt>学生団体 SEAds</dt>
-                    <dd>　since 2023/04/01</dd>
+                    <dd>子ども向けものづくりワークショップの企画・運営を行う</dd>
                 </dl>
                 </a>
             </li>
@@ -129,7 +129,7 @@
                 <img class="de56img" src="./images/manapare.png"></a>
                 <dl>
                     <dt>一社 まなびぱれっと</dt>
-                    <dd>長期インターン</dd>
+                    <dd>長期インターン。<br>公教育と民間企業をつなぐお仕事。</dd>
                 </dl>
             </li>
             <li>
