--- a/de56/index.html
+++ b/de56/index.html
@@ -37,7 +37,7 @@
                          <li><a href="./56de4.html"target="_blank">ー第5回ー</a></li>
                          <li><a href="./56de5.html"target="_blank">ー第6回ー</a></li>
                          <li><a href="https://hidemasa0222.github.io/xbp/de56/dainanakai.html"target="_blank">ー第7回（ひで）ー</a></li>
-                         <li><a href="https://tanetaro.github.io/xbp/de56/3.html"target="_blank">ー最終発表（たねたろー）ー</a> </li>
+                         <li><a href="https://tanetaro.github.io/xbp/de56/3.html"target="_blank">ー最終発表資料（最優秀賞受賞）ー</a> </li>
                          
                          
                     </ul>
