--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <a href="./helpme/test.html">
                 <img class="proto" src="./images/samlec.webp"></a>
                 <dl>
-                    <dt>講義を要約</dt>
-                    <dd>zoomなどの講義内容を文字起こしできるサイトを作成しました</dd>
+                    <dt>無料文字起こしサイト</dt>
+                    <dd>zoomなどのオンライン会議の内容を文字起こしできるサイトを作成しました</dd>
                 </dl>
             </li>
             <li>
