--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </li>
             <li>
                 <a href="./doyolab/index.html">
-                <img class="doyolab" src="./images/IMG_2762.png"></a>
+                <img class="doyolab" src="./images/doyolab_index.png"></a>
                 <dl>
                     <dt>道用ゼミ</dt>
                     <dd>ゼミの活動を閲覧できます</dd>
