--- a/helpme/test.html
+++ b/helpme/test.html
@@ -12,7 +12,7 @@
     <button id="stop-btn" data-lang-ja="音声認識を停止" data-lang-en="Stop Speech Recognition">音声認識を停止</button>
     <button id="reset-btn" data-lang-ja="リセット" data-lang-en="Reset">リセット</button>
     <button id="goto-name-management-btn" class="button-differentiated" data-lang-ja="固有名詞登録ページへ" data-lang-en="Go to Name Registration">固有名詞登録ページへ</button>
-    <button id="lang-toggle-btn">Englishに切り替え</button> <!-- 言語切り替えボタン -->
+    <button id="lang-toggle-btn">英語に切り替え</button> <!-- 言語切り替えボタン -->
 </div>
 
 <div class="textareas-container">
