--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>XBP_HP</title>
+  <title>網倉光生のHP</title>
   <!-- CSS -->
   <link rel="stylesheet" href="./css/style.css">
 <!-- Google Fonts preconnect（1回ずつでOK） -->
