--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>網倉光生のHP</title>
+  <!-- ファビコン（PNGまたはICO） -->
+<link rel="icon" href="./images/0_XBlogo.png" type="image/png">
   <!-- CSS -->
   <link rel="stylesheet" href="./css/style.css">
 <!-- Google Fonts preconnect（1回ずつでOK） -->
