--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </li>
             <li>
                 <a href="./doyolab/index.html">
-                <img class="doyolab" src="./images/doyolab_index.png"></a>
+                <img class="doyolab" src="./doyolab/images/mesh/DSC07655.JPG"></a>
                 <dl>
                     <dt>道用ゼミ</dt>
                     <dd>ゼミの活動を閲覧できます</dd>
