--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>網倉光生のHP</title>
+  <title>網倉光生の大学活動日記</title>
   <!-- ファビコン（PNGまたはICO） -->
 <link rel="icon" href="./images/0_XBlogo.png" type="image/png">
   <!-- CSS -->
