--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <img class="doyolab" src="./doyolab/images/mesh/DSC07655.JPG"></a>
                     <dl>
                         <dt>道用ゼミ</dt>
-                        <dd>ゼミの活動を閲覧できます</dd>
+                        <dd>サーキュラーデザインプロジェクトなどのゼミの活動を閲覧できます</dd>
                     </dl>
                 </li>
                 <li>
