--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
     <div class="lead">
         <p>私、網倉光生と申します。<br>生まれは千葉県の船橋市、住むには良い町ですが、<br>遊びに行くところはあってないようなもの、そんなところで生まれました。<br>このサイトでは、私の学生生活における活動記録を閲覧することができます。
             <br>至らない点もあるかと思いますが、何卒よろしくお願いいたします。<br><br>
-        <a href="https://doyolab.net/xbp/intro/"target="_blank">→エクスビジネスプログラムについてはこちらから</a></p>
     </div>
 
 
@@ -146,8 +145,7 @@
                 
         </div>
         <ul class="item-list">
-            <p class="XBPclass">XBP Classes</p>
-            
+            <a class="XBPclass" href="https://doyolab.net/xbp/intro/"target="_blank">XBPclass</a></p>
             <li>
                 <a href="./de12/index.html"target="_blank"><img class="de12img" src="./images/pcprograming.png" alt="デザイン演習画像"></a>
                 <dl>
