--- a/doyolab/index.html
+++ b/doyolab/index.html
@@ -27,12 +27,12 @@
     </div>
     <div class="content">
         <div class="fade-in-section">
-            <h1>ゼミのドキュメンテーションは、計画的に。</h1>
-            <p>Slackで道用さんに催促された時にはもう遅い。<br>こまめに記録をまとめないと、結果的に痛い目に遭います。本当に。<br>スマホのメモでも構わないので、何をやったか毎回記録しましょう。<br></p>
+            <h1>想像力が、動き出す。</h1>
+            <p>問いを立て、形にする。<br>道用ゼミは、社会とデザインをつなぐ実践の場。<br></p>
         </div>
         <div class="fade-in-section">
-            <h1>Just do it.</h1>
-            <p>ちなみに僕は今、痛い目に遭っています。</p>
+            <h2>ー その先にある「まだない価値」を探しにいく。</h2>
+            <p>思考を深め、アイデアを研ぎ澄ます。<br>ここから未来が動き出す。</p>
         </div>
     </div>
     <div class="random-text-container">
