--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
                 
         </div>
         <ul class="item-list">
-            <a class="XBPclass" href="https://doyolab.net/xbp/intro/"target="_blank">XBPclass</a></p>
+            <div class="XBP-logo-with-line">
+                <a href="https://doyolab.net/xbp/intro/" target="_blank">
+                  <img src="./images/logo_w.png" class="XBPclass" alt="XBPロゴ">
+                </a>
+            </div>
             <li>
                 <a href="./de12/index.html"target="_blank"><img class="de12img" src="./images/pcprograming.png" alt="デザイン演習画像"></a>
                 <dl>
