--- a/doyolab/SEAds.html
+++ b/doyolab/SEAds.html
@@ -33,18 +33,23 @@
         <nav>
             <ul>
                 <li><a href="#home">ホーム</a></li>
-                <li><a href="#overview">概要</a></li>
+                <li><a href="#introduction">概要</a></li>
                 <li><a href="#profile">投稿</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="overview">
-        <h2>概要</h2>
-        <p>2023.4.1より始まった、ものづくりワークショップの企画・運営を行う学生団体SEAdsの紹介</p>
+    <section id="introduction">
+        <h2>つくるをもっと身近に。</h2>
+        <p>
+            当団体は、ものづくりにあまり触れたことのない方を対象に、楽しく学べるワークショップを企画している学生団体です。<br>
+            ものづくりの魅力や楽しさを広く伝え、多くの方々に体験していただける機会を提供したいと考えています。<br>
+            私たちは、ものづくりを通じて、人と人とのつながりやコミュニケーションが生まれ、そこから自分の好きなことや苦手なことを知るというプロセスが重要だと考えています。<br>
+            一緒に作る楽しさや達成感を共有することで、参加者の皆様にとって素晴らしい思い出となるよう、日々努めて参ります。
+        </p>
         <h3><a href="https://www.seads.info/">団体公式HP</a></h3>
         <h3><a href="https://www.instagram.com/seads_information/">団体公式Instagram</a></h3>
     </section>
+
 
     <section id="profile">
         <h2>活動内容</h2>
