--- a/doyolab/index.html
+++ b/doyolab/index.html
@@ -70,7 +70,7 @@
     <div class="image-gallery">
         <!-- SEAds画像 -->
         <div class="image-container">
-            <a href="./SEAds.html"target="_blank">
+            <a href="./seads2.html"target="_blank">
                 <img src="./images/SEAds.png" alt="SEAds">
             </a>
         </div>
