--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <p class="EA">Extracurricular Activities</p>
                 
                 <li>
-                    <a href="./doyolab/SEAds.html">
+                    <a href="./doyolab/seads2.html">
                     <img class="seads" src="./images/seads_logo2.png"></a>
                     <dl>
                         <dt>学生団体 SEAds</dt>
