--- a/helpme/introduction.html
+++ b/helpme/introduction.html
@@ -30,7 +30,7 @@
         <ol class="list-decimal list-inside space-y-2">
           <li>ブラウザ（Google Chrome）でこのサイトを開きます。</li>
           <li>[開始] ボタンをクリックすると、マイク入力の文字起こしが始まります。</li>
-          <li>出力はリアルタイムで左上の欄に表示され、一定量ごとに下の欄に保存されます。</li>
+          <li>出力はリアルタイムで上の欄に表示され、一定量ごとに下の欄に保存されます。</li>
           <li>「保存用テキスト」はコピーして過去欄に移動できます。</li>
         </ol>
       </section>
