--- a/doyolab/seads2.html
+++ b/doyolab/seads2.html
@@ -211,7 +211,7 @@
 
   <header id="top" class="hero">
     <h1>つくるをもっと身近に</h1>
-    <p>ワクワクするものづくり体験を通じて、子どもも大人も“できた！”を実感できる場を届けます。</p>
+    <p>ワクワクするものづくり体験を通じて、子どもも大人も“できた！”<br>を実感できる場を届けます。</p>
     <a href="#workshops" class="cta-btn">Facebook投稿を見る</a>
   </header>
 
