--- a/de12/4.html
+++ b/de12/4.html
@@ -48,7 +48,8 @@
     自分なりに調べ、対処方らしきものもあったのだが、ゲーム進行に組み込む事ができなかった。<br>
     加えて、テストプレイ回数に限界があり、不具合がないとは言い切れない。これらは今後の課題である。<br>
     少なからず大変なこともあったが、総じて楽しかった。<br>
-    追記：3人対戦は不備が多い為閉鎖します。すみません。
+    追記1：3人対戦は不備が多い為閉鎖します。すみません。<br>
+    追記２：pythonで書かれてはいるけど、これはプログラミングではありません。2022年の網倉くんはchatGPTも無かったので手探りで頑張って作ったんです。
   </div>
 </div>
 </body>
