--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="mb-6">
-          <label for="saved-text" class="block mb-2 text-sm font-medium text-gray-700">保存用テキスト</label>
+          <label for="saved-text" class="block mb-2 text-sm font-medium text-gray-700">保存用テキスト（コピーしてAIで要約してね）</label>
           <textarea id="saved-text" class="w-full h-48 p-4 border border-gray-300 rounded-lg bg-white resize-none shadow-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500"></textarea>
         </div>
 
