--- a/helpme/introduction.html
+++ b/helpme/introduction.html
@@ -45,6 +45,7 @@
           <li>複数出力に「BlackHole」と「内蔵スピーカー」を追加。</li>
           <li>Zoomの出力デバイスを「複数出力装置」に変更。</li>
           <li>ブラウザでこのサイトを開き、音声認識を開始するとZoomの音声が取得できます。</li>
+          <li>Windowsは分からん。頑張って！</li>
         </ol>
       </section>
 
