--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </dl>
                 </li>
                 <li>
-                    <a href="./helpme/test2.html">
+                    <a href="./helpme/cheindex.html">
                     <img class="proto" src="./images/samlec.webp"></a>
                     <dl>
                         <dt>無料文字起こしサイト</dt>
