--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </span>
             </p> 
             <ul class="item-list">
-                <p class="EA">Extracurricular Activities</p>
+                <p class="EA">Main Activities</p>
                 
                 <li>
                     <a href="./doyolab/seads2.html">
