--- a/helpme/cheindex.html
+++ b/helpme/cheindex.html
@@ -40,7 +40,7 @@
   </head>
   <body class="text-gray-800">
     <header class="sticky top-0 z-50 shadow-sm px-6 py-4 flex justify-between items-center border-b bg-white/80 backdrop-blur">
-      <h1 class="text-xl font-semibold">リアルタイム文字起こし</h1>
+      <h1 class="text-xl font-semibold">リアルタイム文字起こす</h1>
       <div class="flex gap-2">
         <a href="introduction.html" class="text-sm border border-gray-300 hover:border-gray-400 px-4 py-2 rounded transition" target="_blank">使い方ガイド</a>
         <button id="lang-toggle-btn" class="text-sm border border-gray-300 hover:border-gray-400 px-4 py-2 rounded transition">言語切替</button>
